<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ThongTinActivity"
    android:background="@drawable/gradient">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#B2B4C1"
        app:title="@string/th_ng_tin">
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">
        <TextView
            android:text=""
            android:textSize="25sp"
            android:textStyle="bold"
            android:id="@+id/title"
            android:paddingBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"/>
        <TextView
            android:text="@string/khi_c_nhu_c_u_mua_h_ng_tr_n_shop_ng_i_mua_c_n_th_c_hi_n_c_c_b_c_sau_y"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:id="@+id/dong1"
            app:layout_constraintTop_toBottomOf="@+id/title"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            />
        <TextView
            android:text="@string/ng_nh_p_t_i_kho_n_shop"
            android:layout_width="match_parent"
            android:id="@+id/dong2"
            app:layout_constraintTop_toBottomOf="@+id/dong1"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints" />
        <TextView
            android:text="@string/t_m_ki_m_tham_kh_o_th_ng_tin_s_n_ph_m_d_ch_v_khuy_n_m_i_v_c_c_ng_i_b_n_m_ng_i_mua_ang_quan_t_m"
            android:layout_width="match_parent"
            android:id="@+id/dong3"
            app:layout_constraintTop_toBottomOf="@+id/dong2"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints" />
        <TextView
            android:text="@string/tham_kh_o_th_ng_tin_gi_v_ch_nh_s_ch_h_tr_c_a_b_n_b_n_s_n_ph_m_d_ch_v_m_ng_i_mua_ang_c_nhu_c_u_mua_c_th_tham_kh_o_m_t_h_ng_t_ng_t_c_a_nh_ng_ng_i_b_n_kh_c_tr_n_website_shop_a_ra_quy_t_nh_mua_s_n_ph_m_d_ch_v"
            android:layout_width="match_parent"
            android:id="@+id/dong4"
            app:layout_constraintTop_toBottomOf="@+id/dong3"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints" />
        <TextView
            android:text="@string/d_a_tr_n_th_ng_tin_tham_kh_o_c_t_ng_i_b_n_s_n_ph_m_d_ch_v_ng_i_mua_c_th_li_n_h_v_i_ch_gian_h_ng_qua_th_ng_tin_li_n_h_tr_n_gian_h_ng_h_i_th_m_th_ng_tin_s_n_ph_m_d_ch_v_ho_c_ti_p_x_c_tr_c_ti_p_xem_v_mua_s_n_ph_m_d_ch_v"
            android:layout_width="match_parent"
            android:id="@+id/dong5"
            app:layout_constraintTop_toBottomOf="@+id/dong4"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints" />
        <TextView
            android:text="@string/ng_i_mua_a_ra_quy_t_nh_t_h_ng_tr_c_tuy_n_b_ng_c_ch_click_v_o_t_h_ng"
            android:layout_width="match_parent"
            android:id="@+id/dong6"
            app:layout_constraintTop_toBottomOf="@+id/dong5"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints" />
        <TextView
            android:text="@string/ng_i_mua_l_a_ch_n_c_ch_th_c_giao_d_ch_tuy_theo_ch_nh_s_ch_c_a_t_ng_gian_h_ng_t_ra"
            android:layout_width="match_parent"
            android:id="@+id/dong7"
            app:layout_constraintTop_toBottomOf="@+id/dong6"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints" />
        <TextView
            android:text="@string/n_h_ng_c_a_ng_i_mua_s_c_chuy_n_th_ng_tin_n_ng_i_b_n_t_y_v_o_th_a_thu_n_gi_a_ng_i_mua_v_ng_i_b_n_m_shop_c_th_h_tr_qu_tr_nh_v_n_chuy_n_h_ng_h_a_v_thanh_to_n_m_b_o_ho_c_hai_b_n_t_giao_d_ch_v_i_nhau"
            android:layout_width="match_parent"
            android:id="@+id/dong8"
            app:layout_constraintTop_toBottomOf="@+id/dong7"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints" />
        <TextView
            android:text="@string/ng_i_mua_nh_n_s_n_ph_m_d_ch_v"
            android:layout_width="match_parent"
            android:id="@+id/dong9"
            app:layout_constraintTop_toBottomOf="@+id/dong8"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints" />
        <TextView
            android:text="@string/ng_i_mua_th_c_m_c_khi_u_n_i_ng_i_b_n_n_u_c_qua_t_ng_i_h_tr_c_a_shop"
            android:layout_width="match_parent"
            android:id="@+id/dong10"
            app:layout_constraintTop_toBottomOf="@+id/dong9"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

</RelativeLayout>
